# ssquant

./: .gitignore  API参考手册.md  LICENSE  MANIFEST.in  README.md  build_wheels.py  ml_model.pkl  pyproject.toml  requirements.txt  setup.py  文档导航.md  更新日志_2026-01-06.md  更新日志_v0.4.0.md  用户手册.md
ai_agent/: README.md  __init__.py  app.py  requirements.txt  settings.json
ai_agent/static/: package-lock.json  package.json
ai_agent/templates/: index.html
examples/: A_CTP连接状态监测测试_真实断网.py  A_工具_导入数据库DB示例.py  A_工具_数据库管理_查看与删除.py  A_撤单重发示例.py  A_穿透式测试脚本.py  B_auto_params_demo.py  B_十大经典策略之Aberration.py  B_双均线策略.py  B_多品种多周期交易策略.py  B_多品种多周期交易策略_参数优化.py  B_强弱截面轮动策略.py  B_日内交易策略.py  B_机器学习策略_随机森林.py  B_海龟交易策略.py  B_网格交易策略.py  B_跨周期过滤策略.py  B_跨品种套利策略.py  B_跨期套利策略.py  C_期权交易策略.py  C_期货期权组合策略.py  C_纯Tick限价单交易策略.py  C_纯Tick高频交易策略.py
ssquant/: __init__.py
ssquant/api/: __init__.py  debug_utils.py  strategy_api.py
ssquant/assets/: __init__.py
ssquant/backtest/: README.md  __init__.py  backtest_core.py  backtest_data.py  backtest_logger.py  backtest_report.py  backtest_results.py  backtest_visualization.py  function_api.py  html_report.py  live_trading_adapter.py  multi_source_backtest.py  parameter_optimizer.py  unified_runner.py
ssquant/config/: __init__.py  path_config.py  trading_config.py
ssquant/ctp/: __init__.py  loader.py
ssquant/ctp/py310/: __init__.py
ssquant/ctp/py311/: __init__.py
ssquant/ctp/py312/: __init__.py
ssquant/ctp/py313/: __init__.py
ssquant/ctp/py314/: __init__.py
ssquant/ctp/py39/: __init__.py  thostmduserapi.py  thosttraderapi.py
ssquant/data/: __init__.py  api_data_fetcher.py  contract_info.py  contract_mapper.py  data_source.py  historical_preloader.py  local_data_loader.py  multi_data_fetcher.py
ssquant/indicators/: __init__.py  tech_indicators.py
ssquant/pyctp/: __init__.py  md_api.py  real_trading_client.py  simnow_client.py  simnow_config.py  trader_api.py
